--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"><!--Trae la fuente pacifico.-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="chatgpt.css" />
+  <link rel="stylesheet" href="style.css" />
   <title>Portafolio Nahuel</title>
 </head>
 <body>
@@ -59,3 +59,4 @@
 
 </body>
 </html>
+
