--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
   </section>
 
-  <script src="chatgpt.js"></script>
+  <script src="script.js"></script>
 <!-- Acá empieza la segunda pantalla, pantalla galería -->
   <section class="gallery-section">
   <h2>Videos deportivos</h2>
@@ -59,4 +59,5 @@
 
 </body>
 </html>
+
 
