--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Búsqueda del Tesoro</title>
-  <link rel="stylesheet" href="Teamo.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -65,6 +65,7 @@
       </aside>
     </div>
   </div>
-  <script src="Teamo.js"></script>
+  <script src="script.js"></script>
 </body>
+
 </html>
