--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <!-- COLUMNA IZQUIERDA -->
       <div class="left">
         <div class="card pistas">
-          SE TE DARÁN PISTAS (en papel)!
+          SE TE DARÁN PISTAS!
+          (Dentro de este mapa las recompensas)
         </div>
 
         <div class="card map">
@@ -40,7 +41,7 @@
       <aside class="right">
         <div class="card rules">
           <div style="display:flex;justify-content:space-between;align-items:center">
-            <div><strong>Reglas</strong><div class="muted">Lee atentamente</div></div>
+            <div><strong>Reglas</strong><div class="muted">Lee atentamente (5 Recompensas)</div></div>
             <button class="btn small" id="toggleRules">Ver/ocultar</button>
           </div>
 
@@ -69,3 +70,4 @@
 </body>
 
 </html>
+
