--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="left">
         <div class="card pistas">
           SE TE DARÁN PISTAS!
-          (Dentro de este mapa las recompensas)
+          <div class="pistas">(Dentro de este mapa las recompensas)</div>
         </div>
 
         <div class="card map">
@@ -70,4 +70,5 @@
 </body>
 
 </html>
+
 
