--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
           <div class="box" id="rulesBox">
             <p>- 1-No preocuparse por nada, todo es parte del juego.</p>
             <p>- 2-Disfrutar.</p>
-            <p>- 3-Pensar y dar besitos.</p>
+            <p>- 3-Se puede usar la moto.</p>
+            <p>- 4-Si demoraste más de 10 minutos decifrando el acertijo, se deben 10 besos y se dice dónde está (castigo)</p>
+            <p>- 4-Pensar y dar besitos.</p>
+            <p>- 5-Cada recompensa va a ser mejor que la anterior</p>
           </div>
         </div>
 
@@ -70,5 +73,6 @@
 </body>
 
 </html>
+
 
 
