--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Carrito - El Sabor</title>
+  <title>Carrito - La tentación</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -171,6 +171,7 @@
     <p>© <span id="year"></span> Carrito La Tentación — Diseñado por Alan</p>
   </footer>
 
-  <script src="scripts.js"></script>
+  <script src="script.js"></script>
 </body>
+
 </html>
