--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <section id="contacto" class="section contact-section">
         <h3 class="section-title" id="contacto_titulo">Contacto</h3>
         <p>Teléfono / WhatsApp: <strong id="phoneText">092693512 </strong></p>
-        <p>Instagram: <a href="#" target="_blank">@latentacion_fastfood</a></p>
+        <p>Instagram: <a href="https://www.instagram.com/latentacion_fastfood/" target="_blank">@latentacion_fastfood</a></p>
         <p>¿Querés que te agreguemos al listado de pedidos? Hacé clic en el botón de WhatsApp.</p>
       </section>
       </div>
@@ -175,4 +175,5 @@
 </body>
 
 </html>
+
 
