--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
 
       <div class="strip-block">
         <h4>Horarios</h4>
-        <p class="small">Jue-Dom: 19:00 – 01:00</p>
+        <p class="small">Lunes-Domingo: 19:30 – 01:00</p>
       </div>
 
       <div class="strip-block">
         <h4>Métodos de pago</h4>
-        <p class="small">Efectivo • Tarjeta • MercadoPago</p>
+        <p class="small">Efectivo • Transferencias</p>
       </div>
     
       <div id="contactos" >
@@ -137,12 +137,13 @@
   </div>
 
   <footer class="site-footer">
-    <p>© <span id="year"></span> Carrito La Tentación — Diseñado por Alan</p>
+    <p>© <span id="year"></span> Carrito La Tentación — Diseñado por @alan.perdomoo</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
