--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
           <p> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d740.6911221912358!2d-57.80340551368146!3d-34.44472751159008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a30d74b0261069%3A0x5fc357c2e34da2c4!2sH54W%2B2PR%2C%2070000%20Col.%20del%20Sacramento%2C%20Departamento%20de%20Colonia!5e1!3m2!1ses-419!2suy!4v1758042329245!5m2!1ses-419!2suy" width="600vw" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" margin=" 10px 0"></iframe></p>
          
         </div>
+         <a class="delivery">🚚 Delivery en la zona</a>
       </section>
 
       <!-- Footer / contacto -->
@@ -143,6 +144,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
