--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Carrito - El Sabor</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- Preloader / Animación de inicio -->
@@ -458,9 +458,10 @@
     <p>© <span id="year"></span> Carrito La Tentación — Diseñado por <a href="https://www.instagram.com/alan.perdomoo/" target="_blank" style="color: rgb(48, 48, 48);" >@alan.perdomoo</a>
   </footer>
 
-  <script src="scripts.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
