--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 
       <div class="strip-block">
         <h4>Horarios</h4>
-        <p class="small">Lun-Dom: 19:30 – 01:00</p>
+        <p class="small">Mar-Dom: 19:30 – 01:00</p>
       </div>
 
       <div class="strip-block">
@@ -461,6 +461,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
