--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rincón Verde - Flores Frescas y Hermosas</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
      <!-- Navegación  -->
@@ -256,6 +256,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
